[gd_scene load_steps=7 format=3 uid="uid://duxy3gut30qc4"]

[ext_resource type="Script" uid="uid://i3xqr6w66bo6" path="res://scripts/main_menu.gd" id="1_70b0o"]
[ext_resource type="FontFile" uid="uid://c6lkkcrdoxme1" path="res://ui/FROZBITE.ttf" id="3_r6qnx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ekxnf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vue75"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ln24"]
bg_color = Color(0.689285, 0.689285, 0.689285, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekxnf"]
bg_color = Color(0.331019, 0.331019, 0.331019, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[node name="EndGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_70b0o")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_direction = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -196.0
offset_top = 130.0
offset_right = 196.0
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Restart" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_r6qnx")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_vue75")
theme_override_styles/disabled = SubResource("StyleBoxFlat_vue75")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_vue75")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/hover = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_vue75")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_vue75")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Replay"

[node name="Exit" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_r6qnx")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_vue75")
theme_override_styles/disabled = SubResource("StyleBoxFlat_vue75")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_vue75")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/hover = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_vue75")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_vue75")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Exit"

[node name="GameState" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -190.0
offset_top = 139.0
offset_right = 190.0
offset_bottom = 223.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_r6qnx")
theme_override_font_sizes/font_size = 60
text = "Game Over"

[node name="Message" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -291.5
offset_top = -42.0
offset_right = 291.5
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Активиран сигнал – Спасен си!"

[connection signal="pressed" from="HBoxContainer/Restart" to="." method="_on_replay_btn_pressed"]
[connection signal="pressed" from="HBoxContainer/Exit" to="." method="_on_exit_btn_pressed"]
